MDEV-10347 mysqld got signal 11